# rusty-diceware

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
diceware_wordlists/: CHANGELOG.md  Cargo.toml  build.rs
diceware_wordlists/src/: lib.rs
diceware_wordlists/tests/: tests.rs
src/: diceware.rs  lib.rs  main.rs  tests.rs
tests/: tests.rs
