[package]
name = "diceware"
version = "0.3.7"
authors = ["Yuval Langer <yuvallangerontheroad@gmail.com>"]
license = "AGPL-3.0"
repository = "https://gitlab.com/yuvallanger/rusty-diceware"
description = "A command line diceware, sans dice."
keywords = ["diceware", "password", "passphrase", "generator"]
readme = "README.md"
edition = "2021"


[dependencies]
getopts = "^0.2"
rand = "^0.8"
