[workspace]

members = ["diceware_wordlists"]

[package]
name = "diceware"
version = "0.5.4"
authors = ["Yuval Langer <yuvallangerontheroad@gmail.com>"]
license = "AGPL-3.0"
repository = "https://gitlab.com/yuvallanger/rusty-diceware"
description = "A command line diceware, with or without dice."
keywords = ["diceware", "password", "passphrase", "generator"]
readme = "README.md"
edition = "2021"


[dependencies]
getopts = "^0.2"
rand = "^0.8"
diceware_wordlists = "^0.5"
