[package]
name = "diceware_wordlists"
version = "0.5.4"
authors = ["Yuval Langer <yuvallangerontheroad@gmail.com>"]
license = "AGPL-3.0"
repository = "https://gitlab.com/yuvallanger/rusty-diceware"
description = "Wordlists for the command line tool Rusty Diceware"
keywords = ["diceware", "password", "passphrase", "generator", "wordlists"]
edition = "2021"
