[package]
name = "diceware_wordlists"
version = "0.5.5"
authors = ["Yuval Langer <yuvallangerontheroad@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/yuvallanger/rusty-diceware"
description = "Wordlists for the command line tool Rusty Diceware"
keywords = ["diceware", "password", "passphrase", "generator", "wordlists"]
edition = "2021"
